crates/rsjudge-utils/tests/cases/logging_on_non_result.stderr
error[E0308]: mismatched types
  --> tests/cases/logging_on_non_result.rs:21:27
   |
21 |     let _ = log_if_error!(S);
   |             --------------^-
   |             |             |
   |             |             expected `Result<_, _>`, found `S`
   |             arguments to this function are incorrect
   |
   = note: expected enum `Result<_, _>`
            found struct `S`
note: method defined here
  --> $RUST/core/src/result.rs
   |
   |     pub fn inspect_err<F: FnOnce(&E)>(self, f: F) -> Self {
   |            ^^^^^^^^^^^
help: try wrapping the expression in a variant of `Result`
   |
21 |     let _ = log_if_error!(Ok(S));
   |                           +++ +
21 |     let _ = log_if_error!(Err(S));
   |                           ++++ +
